--- a/retornado.ipynb
+++ b/retornado.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "print(\"probando los comando de git para seguimiento de mis versiones, en entornos de desarrollo que no estan con git\")\n",
     "print(\"probando el segundo commit despues de retroceder\")\n",
-    "print(\"prueba de otro cambio\")"
+    "print(\"prueba de otro cambio\")\n",
+    "print(\"probando mas mierda\")"
    ]
   }
  ],
